nerservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ner-service
spec:
  selector:
    matchLabels:
      app: ner-service
  template:
    metadata:
      labels:
        app: ner-service
    spec:
      containers:
        - name: ner-service
          image: jonathanchewst/nerservice:1.0.0
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
---
# SERVICE
# add in entry for ingress in ingress repo and run jenkins pipeline for ingress to update 
apiVersion: v1
kind: Service
metadata:
  name: ner-service
  labels:
    app: ner-service
spec:
  ports:
  - targetPort: 80
    port: 80
    protocol: TCP
  selector:
    app: ner-service
  type: ClusterIP
