stateservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: state-service
spec:
  selector:
    matchLabels:
      app: state-service
  template:
    metadata:
      labels:
        app: state-service
    spec:
      containers:
        - name: state-service
          image: jonathanchewst/stateservice:1.0.0
          resources:
            limits:
              memory: "500Mi"
              cpu: 500m
            requests:
              cpu: 200m
          ports:
            - containerPort: 80
---

# SERVICE
# add in entry for ingress in ingress repo and run jenkins pipeline for ingress to update 
apiVersion: v1
kind: Service
metadata:
  name: state-service
  labels:
    app: state-service
spec:
  ports:
  - targetPort: 80
    port: 80
    protocol: TCP
  selector:
    app: state-service
  type: ClusterIP
